# GLSC3D

./: .gitignore  CMakeLists.txt  GLSC3D.kdev4  GLSC3D.sln  Mission.txt  Problems.txt  ReadMe
.kdev4/: GLSC3D.kdev4
Advanced/: 2DFigures.c  3DFigures.c  CMakeLists.txt  Cone.c  Depth2D.c  Marker2D.c  Marker3D.cpp
ForDoxygen/: DoDoxygen  Doxyfile
ForDoxygen/glsc3d_doxygen/html/: annotated.html  class_g___v_e_r_t_e_x___b_u_f_f_e_r-members.html  class_g___v_e_r_t_e_x___b_u_f_f_e_r.html  class_g___v_e_r_t_e_x___b_u_f_f_e_r__coll__graph.map  class_g___v_e_r_t_e_x___b_u_f_f_e_r__coll__graph.md5  classes.html  dir_000001_000000.html  files.html  (+796 more)
GLSC3D.xcodeproj/: project.pbxproj
GLSC3D.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Include/: GLSC3D_VectorStruct_private.h  glsc3d.h  glsc3d_3.h  glsc3d_3_math.h  glsc3d_3_private.h  glsc3d_3_private_math.h  glsc3d_math.h  glsc3d_private.h  glsc3d_private_ext.h
Install_file_and_script/: ccg_mac  ccg_ubuntu
Install_file_and_script/Script_on_centos/: 1_Install_dependency_library_centos  2_Test_GLSC3D_on_centos
Install_file_and_script/Script_on_mac/: 2_Install_dependency_library_mac  4_Install_GLSC3D_on_your_mac
Install_file_and_script/Script_on_ubuntu/: 1_Install_dependency_library_ubuntu  2_Test_GLSC3D_on_ubuntu  3_Install_GLSC3D_on_your_ubuntu
Install_file_and_script_and_fonts/: Hello_GLSC3D.c  ccg  ccg_mac  ccg_mac_opengl  ccg_metal  ccg_ubuntu  ccg_windows.bat
Install_file_and_script_and_fonts/Script_on_centos/: 1_Install_dependency_library_centos  2_Test_GLSC3D_on_centos  3_Install_GLSC3D_on_your_centos
Install_file_and_script_and_fonts/Script_on_mac/: 1_Install_macports_mac  2_Install_dependency_library_mac  3_Test_GLSC3D_on_mac  4_Install_GLSC3D_on_your_mac
Install_file_and_script_and_fonts/Script_on_ubuntu/: 1_Install_dependency_library_ubuntu  2_Test_GLSC3D_on_ubuntu  3_Install_GLSC3D_on_your_ubuntu
Install_file_and_script_and_fonts/Script_on_windows/: Clean.bat  RunAllSamples.bat  build.bat  ccg.bat  install.bat
KDevelop/: CMakeLists.txt
KDevelop/.kdev4/: GLSC3D.kdev4
Manual/: 004.pbm  005.pbm  006.pbm  007.pbm  Canvas.key  Canvas_g_area_color.pbm  Canvas_g_arrow.pbm  Canvas_g_arrow2.pbm  Canvas_g_bird_view.pbm  Canvas_g_box.pbm  Canvas_g_box2.pbm  Canvas_g_circle.pbm  Canvas_g_circle2.pbm  Canvas_g_cone.pbm  Canvas_g_cone2.pbm  Canvas_g_contln.pbm  Canvas_g_cylinder.pbm  Canvas_g_data_plot.pbm  Canvas_g_def_scale_2D.pbm  Canvas_g_def_scale_3D.pbm  Canvas_g_ellipse.pbm  Canvas_g_fan.pbm  Canvas_g_fan2.pbm  Canvas_g_init_core.pbm  Canvas_g_isosurface.pbm  Canvas_g_line.pbm  Canvas_g_marker.pbm  Canvas_g_move_g_plot.pbm  Canvas_g_polygon.pbm  Canvas_g_polyline.pbm  Canvas_g_prism.pbm  Canvas_g_pyramid.pbm  Canvas_g_rectangle.pbm  Canvas_g_scr_color.pbm  Canvas_g_sphere.pbm  Canvas_g_triangle.pbm  Canvas_kansu_gaiyo.pbm  CoverPage.pbm  GLSC3D_Manual.aux  GLSC3D_Manual.dvi  (+3 more)
Manual/.TeXManual/: GLSC3D_Manual.aux  GLSC3D_Manual.toc
Marker/: main.c
Sample/: Box.c  Sample_g_box.c  Sample_g_circle.c  Sample_g_cone.c  Sample_g_init.c  Sample_g_light.c  Sample_g_marker.c  Sample_g_text.c  Sample_g_triangle.c
Samples/: CMakeLists.txt  Sample_g_area  Sample_g_area.c  Sample_g_arrow.c  Sample_g_bird_view.c  Sample_g_box.c  Sample_g_circle.c  Sample_g_clipping.c  Sample_g_cone.c  Sample_g_contln.c  Sample_g_cylinder.c  Sample_g_data_plot.c  Sample_g_ellipse.c  Sample_g_fan.c  Sample_g_init.c  Sample_g_input.c  Sample_g_isosurface.c  Sample_g_light.c  Sample_g_line.c  Sample_g_marker.c  Sample_g_move_g_plot.c  Sample_g_polygon.c  Sample_g_polyline.c  Sample_g_prism.c  Sample_g_pyramid.c  Sample_g_rectangle.c  Sample_g_sphere.c  Sample_g_text.c  Sample_g_transparent.c  Sample_g_triangle.c  Sample_off_screen_rendering.c  Test1.c
Shaders/: compile  constants.h  shaders.air  shaders.metal  shaders.metallib
Source/: CMakeLists.txt  g_area.c  g_area.cpp  g_arrow.c  g_arrow.cpp  g_bird_view_3D.c  g_bird_view_3D.cpp  g_box.c  g_box_vert.c  g_camera.c  g_camera.cpp  g_capture.c  g_circle.c  g_circle.cpp  g_cls.c  g_cls_finish.c  g_color.cpp  g_cone.c  g_cone.cpp  g_contln_2D.c  g_cylinder_3D.c  g_cylinder_3D.cpp  g_data_plot.c  g_debug.cpp  g_direction_private.c  g_ellipse_3D.c  g_ellipse_3D.cpp  g_fan.c  g_fan.cpp  g_finish.c  g_font_obj.symb  g_font_obj_creater.c  g_fundamentals.c  g_glwrapper_private.c  g_init.c  g_init.cpp  g_input.c  g_isosurface.c  g_isosurface.cpp  g_isosurface_new.cpp  (+42 more)
Src/: CMakeLists.txt  g_area.cpp  g_arrow.cpp  g_bird_view_3D.cpp  g_box.c  g_box.cpp  g_camera.cpp  g_capture.c  g_capture.cpp  g_circle.cpp  g_cls_finish.c  g_cls_finish.cpp  g_cone.cpp  g_contln_2D.c  g_contln_2D.cpp  g_cylinder_3D.cpp  g_data_plot.c  g_data_plot.cpp  g_debug.cpp  g_ellipse_3D.cpp  g_fan.cpp  g_impl_metal.cpp  g_impl_opengl.cpp  g_init.cpp  g_input.c  g_input.cpp  g_isosurface.cpp  g_light.cpp  g_line.cpp  g_marker.cpp  g_move_plot.c  g_move_plot.cpp  g_off_screen.c  g_polygon_polyline.c  g_polygon_polyline.cpp  g_prism_3D.cpp  g_private.cpp  g_pyramid_3D.cpp  g_rectangle.cpp  g_scale.cpp  (+8 more)
Test/: 2DFigures.c  3DFigures.c  Box.c  Cone.c  Marker.c  Marker2D.c  Marker3D.cpp  Sample_g_area.c  Sample_g_arrow.c  Sample_g_bird_view.c  Sample_g_box.c  Sample_g_circle.c  Sample_g_cone.c  Sample_g_contln.c  Sample_g_cylinder.c  Sample_g_data_plot.c  Sample_g_ellipse.c  Sample_g_fan.c  Sample_g_font.c  Sample_g_init.c  Sample_g_input.c  Sample_g_isosurface.c  Sample_g_light.c  Sample_g_line.c  Sample_g_marker.c  Sample_g_move_g_plot.c  Sample_g_polygon.c  Sample_g_polyline.c  Sample_g_prism.c  Sample_g_pyramid.c  Sample_g_rectangle.c  Sample_g_sphere.c  Sample_g_text.c  Sample_g_transparent.c  Sample_g_triangle.c  Sample_off_screen_rendering.c
Type11/: CMakeLists.txt  GetParam2.c  Rainbow.c  VectorStructOperator.h  basic.h  main.cpp  main_Multi.c  mt19937-64.c  timer.h
Windows_dependency/Lib/: freetype271.lib  libpng16.lib  zlib.lib
metal-cpp/QuartzCore/: CAPrivate.hpp
vcxproj/: 2DFigures.vcxproj  3DFigures.vcxproj  Cone.vcxproj  GLSC3D.vcxproj  GLSC3D.vcxproj.filters  Log.txt  g_debug_callback.cpp
(+220 files in other folders)
